@@ -1,3 +1,8 @@
+2006-06-07  arjan <arjan at yirdis dot nl>
+
+        * Changed Canvas and View to Gaphas. Items should still be converted.
+        In other words, the application does nothing from this point.
+
 2006-06-06  arjan <arjan at yirdis dot nl>
 
 	* Merged Stereotypes branch.
